<?xml version="1.0" encoding = "utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">

        <TextView android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="4dp"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

        <TextView android:id="@+id/supplier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:text="@string/supplier"/>
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toLeftOf="@id/quantity"
            android:text="@string/price"
            android:layout_marginRight="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="0dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@id/buy"
            android:text="@string/quantity"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
        <Button android:id="@+id/buy"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentRight="true"
            android:text="@string/buy"
            android:textColor="@color/colorAccentPink"
            android:layout_marginTop="0dp" />
    </RelativeLayout>


</LinearLayout>